# hdl

./: .gitignore  Makefile  fsm_serial.v  fsm_serial_tb.v
fst/: .clang-format  Cargo.toml  build.rs  fstapi.h
fst/libfst-sys/: Cargo.toml  build.rs  lib.rs  lz4.c
fst/libfst-sys/fstapi/: fstapi.c  wrapper.h
fst/src/: fstapi.rs  main.rs
