[package]
name = "libfst-sys"
build = "build.rs"
version = "0.1.0"
edition = "2021"
authors = ["shua <shua@isthisa.email>"]

[lib]
name = "libfst_sys"
path = "lib.rs"

[dependencies]
# not sure why, but this isn't linking libz
# libz-sys = { version = "1.1.0", default-features = false, features = ["libc"] }

[build-dependencies]
cc = "1.0"
bindgen = "0.69.1"
